--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
 
     <div id="celebration" class="hidden">
-        <img src="https://media.giphy.com/media/l3V0lsG0TR2uSq5nG/giphy.gif" alt="Dancing Guy">
-        <h1>Yay! See you at 9! 🎉</h1>
+        <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3d2h4Y3VwNzZyYWkyZXl3OW8zNjgxbzJjMGNoN3k2YTB1dmh5MmhibiZlcD12MV9naWZzX3JlbGF0ZWQmY3Q9Zw/vMZM9Vlk3Tdled91Km/giphy.gif" alt="Dancing Guy">
+        <h1>Yay! Call at 9 😉 🎉</h1>
         <audio id="audio" src="https://www.myinstants.com/media/sounds/party-horn.mp3"></audio>
     </div>
 
