--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="A Special Invite For You">
+    <meta property="og:description" content="Click to open! ❤️">
     <title>Quick Question! ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
