--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="A Special Invite For You">
     <meta property="og:description" content="Click to open! ❤️">
     <title>Quick Question! ❤️</title>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="main-content">
         <h1>Call date tomorrow at 9:00 PM? ❤️</h1>
+        <p class="subtitle">Missing!</p>
         <div class="btn-group">
             <button id="yes-btn">Yes!</button>
             <button id="no-btn">No</button>
@@ -20,8 +22,8 @@
 
     <div id="celebration" class="hidden">
         <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3d2h4Y3VwNzZyYWkyZXl3OW8zNjgxbzJjMGNoN3k2YTB1dmh5MmhibiZlcD12MV9naWZzX3JlbGF0ZWQmY3Q9Zw/vMZM9Vlk3Tdled91Km/giphy.gif" alt="Dancing Guy">
-        <h1>Yay! Call at 9 😉 🎉</h1>
-        <audio id="audio" src="https://www.myinstants.com/media/sounds/party-horn.mp3"></audio>
+        <h1>Call at 9 😉 🎉</h1>
+        <audio id="audio" src="celebration.mp3"></audio>
     </div>
 
     <script src="script.js"></script>
