--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="main-content">
         <h1>Call date tomorrow at 9:00 PM? ❤️</h1>
-        <p class="subtitle">I've missed hearing your voice!</p>
+        <p class="subtitle">missing the voice!</p>
         <div class="btn-group">
             <button id="yes-btn">Yes!</button>
             <button id="no-btn">No</button>
@@ -20,7 +20,7 @@
     </div>
 
     <div id="celebration" class="hidden">
-        <img src="https://media.giphy.com/media/vMZM9Vlk3Tdled91Km/giphy.gif" alt="Dancing Guy">
+        <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3d2h4Y3VwNzZyYWkyZXl3OW8zNjgxbzJjMGNoN3k2YTB1dmh5MmhibiZlcD12MV9naWZzX3JlbGF0ZWQmY3Q9Zw/vMZM9Vlk3Tdled91Km/giphy.gif" alt="Dancing Guy">
         <h1>Call at 9 😉 🎉</h1>
         <audio id="audio" src="celebration.mp3"></audio>
     </div>
