--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="main-content">
         <h1>Call date tomorrow at 9:00 PM? ❤️</h1>
-        <p class="subtitle">Missing Call!</p>
+        <p class="subtitle">Missing Call!!</p>
         <div class="btn-group">
             <button id="yes-btn">Yes!</button>
             <button id="no-btn">No</button>
